# rust_chat_server

./: Cargo.toml  README.md  config.txt
db/: init.sql
public/css/: chat.css  index.css
public/html/: chat.hbs  index.html  mostrar_rfc.hbs  pedir_rfc.html  saludar.hbs
public/script/: chat.js
src/: chat.rs  main.rs
