[package]
name = "chatrs"
version = "0.1.0"
edition = "2021"
authors = ["Edgar <regalado.correo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-files = "0.5"
serde = "1.0"
handlebars = "4.1.5"
serde_json = "1.0"
rand = "0.8"
actix-web-actors = "3.0.0"
tokio-postgres = "0.7.5"